--- a/mystyle.css
+++ b/mystyle.css
@@ -1,9 +1,10 @@
+
 /* Table style */
-subject,th, td {
+subject,th, td,ent {
 
     text-align: center;
 
-    padding: 8px;
+    padding: 9px;
 
 }
 
@@ -25,14 +26,23 @@ th {
     background-color :cornflowerblue;
     color :black;
     
+}table{
+    width: 100%;
 }
 
 
 table, td, th {
 
     border: 3px solid black;
-
+font-family: 'Kanit', sans-serif;
 }
 td {
-    font-family:  'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family:  'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ,'Kanit';
 }
+#ent {
+    background-color:gold; 
+    color: blue;
+    font-size: 30;
+    font-family: 'Kanit', sans-serif;
+}
+
