--- a/mystyle.css
+++ b/mystyle.css
@@ -19,7 +19,8 @@ th {
     background-color: #4CAF50;
 
     color: white;
-    font-family:monospace
+    font-family: monospace;
+    font-size: 15;
 
 }
 #subject {
@@ -44,5 +45,34 @@ td {
     color: blue;
     font-size: 30;
     font-family: 'Kanit', sans-serif;
+}
+h2{
+    color:brown;
+    font-size: 30;
+    font-family: 'Kanit', sans-serif;
+}
+div.img {
+    margin: 5px;
+    border: 1px solid black;
+    float: left;
+    width: 300px;
+    height: 100px;
+}
+
+div.img:hover {
+    border: 1px solid #777;
+}
+
+div.img img {
+    width: 100%;
+    height: 350%;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+    border: 1px solid black;
+    font-family: 'Kanit', sans-serif;
+    background-color: skyblue;
 }
 
