add navigator bar func

--- a/mystyle.css
+++ b/mystyle.css
@@ -66,6 +66,7 @@ div.img:hover {
 div.img img {
     width: 100%;
     height: 350%;
+    align-items: center;
 }
 
 div.desc {
@@ -74,5 +75,33 @@ div.desc {
     border: 1px solid black;
     font-family: 'Kanit', sans-serif;
     background-color: skyblue;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color:darkred;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: powderblue;
+}
+li de {
+    background-color: darkred;
+    color: white;
 }
 
